--- a/composer.json
+++ b/composer.json
@@ -4,6 +4,9 @@
     "autoload": {
         "psr-4": {
         	"tranber\\": "src/php"
-        }
+        },
+        "files": [
+        	"src/php/functions/errors.php"
+        ]
     }
 }	
